# mechs-assistant

./: .cursorrules  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  rspack.config.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json
.claude/: settings.json
.cursor/: instructions.mdc
.github/workflows/: build-desktop.yml  build-inventory-parser.yml  deploy.yml  merge-develop-to-main.yml  sync-sheets.yml  sync-wiki.yml
apps/cop/: .gitignore  index.html  package.json  rspack.config.js  tsconfig.json
apps/inventory-parser/: .gitignore  package-lock.json  package.json
apps/inventory-parser/src-tauri/: Cargo.toml  tauri.conf.json
apps/inventory-parser/src-tauri/capabilities/: default.json
apps/inventory-parser/src-tauri/src/: lib.rs  main.rs
apps/web/: jest.config.js  package.json  rspack.config.js  tsconfig.json
context/: index.yml  project.yml  roadmap.md  workflow.md
context/conventions/: assets-layout.yml  assets-preservation.yml  blocking-question.yml  changelog.yml  code-style.yml  completeness.yml  consistency-check.yml  context-minimization.yml  cop-stack.yml  data-overlay.yml  entity-naming.yml  git-commits.yml  goal-consistency.yml  goals.yml  interactive-stability.yml  language.yml  monorepo-shared-config.yml  mui-imports.yml  mui.yml  no-code-comments.yml  openness.yml  react.yml  rspack.yml  stack.yml  styling.yml  tanstack-query.yml  testing.yml  theme-colors.yml  todo-split.yml  typescript.yml  ui-no-engineering-leak.yml  verification.yml  zustand.yml
context/views/: active.todo  goal--calculator.yaml  (+16 more)
data/: ammo.json  blueprints.json  components.json  equipment.json  items.json  loot.json  ore.json  robots.json  skills.json  weapons.json
public/: index.html
scripts/: catalogs.config.ts  tsconfig.json
src/: App.test.tsx  App.tsx  global.d.ts  index.tsx  router.tsx  setupTests.ts  theme.ts
(+417 files in other folders)
